# liblinsum

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cc
src/functions/: characteristic.cc  characteristic.h  guassian.h  membership_function.h  trapezoidal.cc  trapezoidal.h  triangular.cc  triangular.h
src/sets/: crisp_set.cc  crisp_set.h  fuzzy_type_1_set.cc  fuzzy_type_1_set.h  fuzzy_type_2_set.h  set.cc  set.h
src/universe/: dense.cc  dense.h  discrete.cc  discrete.h  universe.cc  universe.h
